kubernetes/flaskapp/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ccpro
spec:
  selector:
    matchLabels:
      app: ccpro-frontend
      stage: dev
  template:
    metadata:
      labels:
        app: ccpro-frontend
        stage: dev
    spec:
      containers:
        - name: ccpro-frontend
          image: sanjay2028/tt-node-frontend:v3
          imagePullPolicy: IfNotPresent 
          ports:
          - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: ccpro-frontend-svc
  namespace: ccpro
spec:
  selector:
    app: ccpro-frontend
    stage: dev
  ports:
  - port: 80
    targetPort: 8000
