kubernetes/flaskapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ccpro-ingress
  namespace: ccpro
  labels:
    app.kubernetes.io/name: ingress
    stage: dev
spec:
  rules:
  - host: ccpro.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ccpro-frontend-svc
            port: 
              number: 80
